# KinodynamicFabrics.jl

./: .gitignore  CondaPkg.toml  LICENSE  MUJOCO_LOG.TXT  Manifest.toml  Project.toml  README.md
examples/: basketball.jl  cornhole.jl  dodge_ball.jl  dodge_ball_maintain_ee.jl  dodge_cannonball.jl  dodge_cannonball_maintain_ee.jl  package_delivery.jl
experiments/reactivity/: kinofabs.jl  qpcontrol.jl
experiments/runtime/: kinofabs.jl  qpcontrol.jl
src/: KinodynamicFabrics.jl  alip.jl  config.jl  constants.jl  get.jl  helpers.jl  kinofabrics.jl  load.jl  lowlevel.jl  lowlevel_old.jl  qp.jl  set.jl  task_maps.jl  types.jl  utils.jl
src/comms/ros/ws/src/subpub/: CMakeLists.txt  package.xml
src/comms/ros/ws/src/subpub/include/subpub/: pose_t.hpp  posearray_t.hpp  subpub.hpp
src/comms/ros/ws/src/subpub/scripts/: pose_publisher.py
src/comms/ros/ws/src/subpub/src/: main.cpp  storage.cpp  subpub.cpp
src/dynamics/: cmm.jl  dynamics.jl  generalized_gravity.jl  mass_inertia_matrix.jl
src/kinematics/: J_vc_walk_LS.jl  J_vc_walk_RS.jl  Jmanip_vc.jl  Jp_com_wrt_feet.jl  Jp_left_hand_wrt_base.jl  Jp_left_wrist.jl  Jp_right_hand_wrt_base.jl  Jp_right_wrist.jl  L_world_about_point.jl  ankle_joint_coeffs.csv  ankle_motor_coeffs.csv  ankles.jl  com_wrt_toe.jl  elbow_point_left.jl  (+42 more)
test/: convert_to_video.jl  digit_visualize.jl  plot_data.jl  runtests.jl  test_basketball.jl  test_cornhole.jl  test_dodge.jl  test_fabric.jl  test_jump.jl  test_load.jl  test_mobile_manipulation.jl  test_qp.jl  test_render.jl  test_scenes.jl  test_standing.jl  test_walk.jl  view_model.jl
(+69 files in other folders)
